# AI-Db-Advisor

./: .dockerignore  .env.clickhouse  .env.clickhouse.example  .env.docker.example  .env.example  .env.template  .env.toolbox  .env.toolbox.example  .gitignore  .gitignore.txt  AI_ASSISTANT_GUIDE.md  ALERT_INTEGRATION_COMPLETE.md  ALERT_INTEGRATION_PLAN.md  ALERT_SETUP_SUMMARY.md  ALERT_SYSTEM_CLARIFICATION.md  ALERT_SYSTEM_COMPLETION_SUMMARY.md  ALERT_SYSTEM_FINAL_SUMMARY.md  ALERT_SYSTEM_IMPLEMENTATION.md  ALERT_SYSTEM_INCIDENT_REPORT.md  ALERT_SYSTEM_TEST_REPORT.md  ALERT_SYSTEM_WORKING_SUMMARY.md  ALERT_TESTING_GUIDE.md  ANALYTICS_DASHBOARD_GUIDE.md  ANALYTICS_FIXED.md  ANALYTICS_SETUP_GUIDE.md  ANALYTICS_TEST_RESULTS.md  BUGFIX_SUMMARY.md  CLAUDE.md  CLIENT_PRESENTATION_PACKAGE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DESKTOP_APPS.md  DOCKER.md  DUCKDB_ANALYTICS_GUIDE.md  DUCKDB_SYNC_FIXES.md  ENHANCEMENTS_SUMMARY.md  FEATURE_STATUS.md  FRONTEND_ANALYTICS_INTEGRATION.md  Features_Need_to_Implement.md  GRAFANA_DASHBOARDS.md  (+73 more)
.claude/: settings.local.json
backend/: .coverage  CLAUDE.md  QUICKSTART_TESTING.md  TESTING.md  TEST_FIXES.md  TEST_SUMMARY.md  __init__.py  config.py  create_mysql_university_db.py  deps.py  inspect_db.py  main.py  populate_university_db.py  pytest.ini  run.py  run_tests.py  schemas.py  validate_setup.py
docs/: MCP_IMPLEMENTATION_SUMMARY.md  MCP_README.md  (+2 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs
(+170 files in other folders)
